[package]
name = "us-comics-server"
version = "0.1.0"
authors = ["dave-leeper <magicjtv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hostname = "^0.3"
chrono = { version = "0.4", features = ["serde"] }
console = "0.9.1"
lazy_static = "1.4.0"
bytes = "0.5"
http = "0.2"
httparse = "1.0"
time = "0.1"
